--- a/index.html
+++ b/index.html
@@ -1,58 +1,126 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Website Landing Page - With Background Video Slider | Travel</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
-</head>
-<body>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>
+      Responsive Website Landing Page - With Background Video Slider | Travel
+    </title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+    />
+  </head>
+  <body>
     <header>
-        <a href="#" class="brand">Travel</a>
-        <div class="menu-btn"></div>
-        <div class="navigation">
-            <div class="navigation-items">
-                <a href="#">Home</a>
-                <a href="#">About</a>
-                <a href="#">Explore</a>
-                <a href="#">Gallery</a>
-                <a href="#">Contact</a>
-            </div>
+      <a href="#" class="brand">Travel</a>
+      <div class="menu-btn"></div>
+      <div class="navigation">
+        <div class="navigation-items">
+          <a href="#">Home</a>
+          <a href="#">About</a>
+          <a href="#">Explore</a>
+          <a href="#">Gallery</a>
+          <a href="#">Contact</a>
         </div>
+      </div>
     </header>
+
     <section class="home">
-        <video class="video-slide active" src="01.mp4" autoplay muted loop></video>
-        <video class="video-slide" src="02.mp4" autoplay muted loop></video>
-        <video class="video-slide" src="3.mp4.mp4" autoplay muted loop></video>
-        <div class="content active">
-            <h1>Wonderful<br><Span>Island</Span></h1>
-            <p>Beneath a sun-kissed sky, where azure waves caress the pristine shores, lies a marvelous island sanctuary, beckoning wanderers with its irresistible allure. A symphony of vibrant hues dances upon the horizon as golden sands embrace the turquoise embrace of the sea. Time stands still in this enchanting realm, where palm trees sway gently, whispering secrets of tranquility to the salty breeze, while exotic blooms perfume the air. Beneath starlit skies, souls find solace in this timeless paradise.</p>
-            <a href="#">Read More</a>
-        </div>
-        <div class="content">
-            <h1>Camping<br><Span>Enjoy</Span></h1>
-            <p>Amidst nature's embrace, a starlit sky and crackling fire create pure tranquility. Whispers of wind, scent of earth, and laughter unite in a rustic haven. In this rustic haven, time slows down, allowing weary spirits to find solace in the simplicity of life. With every breath, an adventure unfolds, weaving memories into the fabric of our hearts. Camping becomes a journey of serenity, where the beauty of nature intertwines with the joy of being alive.</p>
-            <a href="#">Read More</a>
-        </div>
-        <div class="content">
-            <h1>Feel Nature<br><Span>Relax</Span></h1>
-            <p>Immersed in nature's embrace, worries fade away, and tranquility takes hold. The gentle caress of a breeze and the symphony of birdsong soothe the soul. With each step on the earth's soft carpet, a sense of grounding emerges, rejuvenating the weary spirit. The rustling leaves and dancing wildflowers create a canvas of serenity, inviting one to pause and simply be. Nature's embrace is a sanctuary for relaxation, where the beauty of the world unfolds and inner peace finds its home.</p>
-            <a href="#">Read More</a>
-        </div>
-        <div class="media-icons">
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-        </div>
-        <div class="slider-navigation">
-            <div class="nav-btn active"></div>
-            <div class="nav-btn"></div>
-            <div class="nav-btn"></div>
-        </div>
+      <video
+        class="video-slide active"
+        src="img/01.mp4"
+        autoplay
+        muted
+        loop
+      ></video>
+      <video class="video-slide" src="img/02.mp4" autoplay muted loop></video>
+      <video class="video-slide" src="img/03.mp4" autoplay muted loop></video>
+      <video class="video-slide" src="img/04.mp4" autoplay muted loop></video>
+      <video class="video-slide" src="img/05.mp4" autoplay muted loop></video>
+
+      <div class="content active">
+        <h1>Wonderful.<br /><span>Island</span></h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi iure
+          dolor molestiae at magni quod autem porro maxime natus non
+          consectetur, ex sed eos vero recusandae id culpa voluptates?
+          Temporibus. Suscipit consectetur molestias voluptates non ipsam
+          corporis perspiciatis dolore inventore minima, totam accusantium at
+          eveniet, reiciendis reprehenderit dicta vero sit magni ab.
+        </p>
+        <a href="#">Read More</a>
+      </div>
+
+      <div class="content">
+        <h1>Camping.<br /><span>Enjoy</span></h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi iure
+          dolor molestiae at magni quod autem porro maxime natus non
+          consectetur, ex sed eos vero recusandae id culpa voluptates?
+          Temporibus. Suscipit consectetur molestias voluptates non ipsam
+          corporis perspiciatis dolore inventore minima, totam accusantium at
+          eveniet, reiciendis reprehenderit dicta vero sit magni ab.
+        </p>
+        <a href="#">Read More</a>
+      </div>
+
+      <div class="content">
+        <h1>Adventures.<br /><span>Off Road</span></h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi iure
+          dolor molestiae at magni quod autem porro maxime natus non
+          consectetur, ex sed eos vero recusandae id culpa voluptates?
+          Temporibus. Suscipit consectetur molestias voluptates non ipsam
+          corporis perspiciatis dolore inventore minima, totam accusantium at
+          eveniet, reiciendis reprehenderit dicta vero sit magni ab.
+        </p>
+        <a href="#">Read More</a>
+      </div>
+
+      <div class="content">
+        <h1>Road Trip.<br /><span>Together</span></h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi iure
+          dolor molestiae at magni quod autem porro maxime natus non
+          consectetur, ex sed eos vero recusandae id culpa voluptates?
+          Temporibus. Suscipit consectetur molestias voluptates non ipsam
+          corporis perspiciatis dolore inventore minima, totam accusantium at
+          eveniet, reiciendis reprehenderit dicta vero sit magni ab.
+        </p>
+        <a href="#">Read More</a>
+      </div>
+
+      <div class="content">
+        <h1>Feel Nature.<br /><span>Relax</span></h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi iure
+          dolor molestiae at magni quod autem porro maxime natus non
+          consectetur, ex sed eos vero recusandae id culpa voluptates?
+          Temporibus. Suscipit consectetur molestias voluptates non ipsam
+          corporis perspiciatis dolore inventore minima, totam accusantium at
+          eveniet, reiciendis reprehenderit dicta vero sit magni ab.
+        </p>
+        <a href="#">Read More</a>
+      </div>
+
+      <div class="media-icons">
+        <a href="#"><i class="fab fa-facebook-f"></i></a>
+        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="#"><i class="fab fa-twitter"></i></a>
+      </div>
+
+      <div class="slider-navigation">
+        <div class="nav-btn active"></div>
+        <div class="nav-btn"></div>
+        <div class="nav-btn"></div>
+        <div class="nav-btn"></div>
+        <div class="nav-btn"></div>
+      </div>
     </section>
-    <script src="./scriptt.js"></script>
-</body>
+
+    <script type="text/javascript" src="menu.js"></script>
+  </body>
 </html>
- 
