--- a/index2.html
+++ b/index2.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SocialBook - Varun Jammigumpala</title>
-    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <link rel="stylesheet" type="text/css" href="style2.css"/>
     <script src="https://kit.fontawesome.com/9dcb571314.js" crossorigin="anonymous"></script>
 </head>
 <body>
