--- a/index2.html
+++ b/index2.html
@@ -291,7 +291,7 @@
         </div>
          <!----------------right-sidebar--------------->
         <div class="right-sidebar">
-            <div class="sidebar-title">
+            <!-- <div class="sidebar-title">
                 <h4>Events</h4>
                 <a href="#">See All</a>
             </div>
@@ -318,13 +318,107 @@
                     <p><i class="fas fa-map-marker-alt"></i> Willson Tech Park</p>
                     <a href="#">More Info</a>
                 </div>
-            </div>
+            </div> -->
             <div class="sidebar-title">
-                <h4>Advertisement</h4>
+                <h4>Leaderboard</h4>
                 <a href="#">Close</a>
             </div>
-            <img src="images/advertisement.png" class="sidebar-ads"/>
-            <div class="sidebar-title">
+            <div class=" num1">
+                <div class="num1">
+                    <p class="list-place">1</p>
+                    <p class="list-name">*User name*</p>
+                </div>
+                <p>*score here*</p>
+            </div>
+            <div class=" num2">
+                <div class="num2">
+                    <p class="list-place">2</p>
+                    <p class="list-name">*User name*</p>
+                </div>
+                <p>*score here*</p>
+            </div>
+            <div class=" num3">
+                <div class="num3">
+                    <p class="list-place">3</p>
+                    <p class="list-name">*User name*</p>
+                </div>
+                <p>*score here*</p>
+            </div>
+            <div class="sidebar-list">
+                <div class="sidebar-list">
+                    <p class="list-place">4</p>
+                    <p class="list-name">*User name*</p>
+                </div>
+                <p>*score here*</p>
+            </div>
+            <div class="sidebar-list">
+                <div class="sidebar-list">
+                    <p class="list-place">5</p>
+                    <p class="list-name">*User name*</p>
+                </div>
+                <p>*score here*</p>
+            </div>
+            <div class="sidebar-list">
+                <div class="sidebar-list">
+                    <p class="list-place">6</p>
+                    <p class="list-name">*User name*</p>
+                </div>
+                <p>*score here*</p>
+            </div>
+            <div class="sidebar-list">
+                <div class="sidebar-list">
+                    <p class="list-place">7</p>
+                    <p class="list-name">*User name*</p>
+                </div>
+                <p>*score here*</p>
+            </div>
+            <div class="sidebar-list">
+                <div class="sidebar-list">
+                    <p class="list-place">8</p>
+                    <p class="list-name">*User name*</p>
+                </div>
+                <p>*score here*</p>
+            </div>
+            <div class="sidebar-list">
+                <div class="sidebar-list">
+                    <p class="list-place">9</p>
+                    <p class="list-name">*User name*</p>
+                </div>
+                <p>*score here*</p>
+            </div>
+            <div class="sidebar-list">
+                <div class="sidebar-list">
+                    <p class="list-placee">10</p>
+                    <p class="list-name">*User name*</p>
+                </div>
+                <p>*score here*</p>
+            </div>
+            
+            <div class="line"></div>
+
+            <div class="sidebar-list">
+                <div class="sidebar-list">
+                    <p class="list-placee">96</p>
+                    <p class="list-name">*Next person*</p>
+                </div>
+                <p>*score here*</p>
+            </div>
+            <div class="you">
+                <div class="sidebar-list">
+                    <p class="list-placee">97</p>
+                    <p class="list-name">*You*</p>
+                </div>
+                <p>*score here*</p>
+            </div>
+            <div class="sidebar-list">
+                <div class="sidebar-list">
+                    <p class="list-placee">98</p>
+                    <p class="list-name">*Person behind*</p>
+                </div>
+                <p>*score here*</p>
+            </div>
+
+            <!-- <div class="sidebar-title">
                 <h4>Conversation</h4>
                 <a href="#">Hide Chat</a>
             </div>
@@ -346,7 +440,7 @@
                     <img src="images/member-3.png"/>
                 </div>
                 <P>Samona Rose</P>
-            </div>
+            </div> -->
         </div>
     </div>
 <div class="footer">
