--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
   </head>
   <body>
     <header>
-      <a href="#" class="brand">Travel</a>
       <div class="menu-btn"></div>
     </header>
 
@@ -27,10 +26,6 @@
         muted
         loop
       ></video>
-      <video class="video-slide" src="img/02.mp4" autoplay muted loop></video>
-      <video class="video-slide" src="img/03.mp4" autoplay muted loop></video>
-      <video class="video-slide" src="img/04.mp4" autoplay muted loop></video>
-      <video class="video-slide" src="img/05.mp4" autoplay muted loop></video>
 
       <div class="content active">
         <h1>Wonderful.<br /><span>Island</span></h1>
@@ -42,69 +37,10 @@
           corporis perspiciatis dolore inventore minima, totam accusantium at
           eveniet, reiciendis reprehenderit dicta vero sit magni ab.
         </p>
-        <a href="#">Read More</a>
+        <a href="index2.html">Read More</a>
       </div>
 
-      <div class="content">
-        <h1>Camping.<br /><span>Enjoy</span></h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi iure
-          dolor molestiae at magni quod autem porro maxime natus non
-          consectetur, ex sed eos vero recusandae id culpa voluptates?
-          Temporibus. Suscipit consectetur molestias voluptates non ipsam
-          corporis perspiciatis dolore inventore minima, totam accusantium at
-          eveniet, reiciendis reprehenderit dicta vero sit magni ab.
-        </p>
-        <a href="#">Read More</a>
-      </div>
 
-      <div class="content">
-        <h1>Adventures.<br /><span>Off Road</span></h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi iure
-          dolor molestiae at magni quod autem porro maxime natus non
-          consectetur, ex sed eos vero recusandae id culpa voluptates?
-          Temporibus. Suscipit consectetur molestias voluptates non ipsam
-          corporis perspiciatis dolore inventore minima, totam accusantium at
-          eveniet, reiciendis reprehenderit dicta vero sit magni ab.
-        </p>
-        <a href="#">Read More</a>
-      </div>
-
-      <div class="content">
-        <h1>Road Trip.<br /><span>Together</span></h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi iure
-          dolor molestiae at magni quod autem porro maxime natus non
-          consectetur, ex sed eos vero recusandae id culpa voluptates?
-          Temporibus. Suscipit consectetur molestias voluptates non ipsam
-          corporis perspiciatis dolore inventore minima, totam accusantium at
-          eveniet, reiciendis reprehenderit dicta vero sit magni ab.
-        </p>
-        <a href="#">Read More</a>
-      </div>
-
-      <div class="content">
-        <h1>Feel Nature.<br /><span>Relax</span></h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi iure
-          dolor molestiae at magni quod autem porro maxime natus non
-          consectetur, ex sed eos vero recusandae id culpa voluptates?
-          Temporibus. Suscipit consectetur molestias voluptates non ipsam
-          corporis perspiciatis dolore inventore minima, totam accusantium at
-          eveniet, reiciendis reprehenderit dicta vero sit magni ab.
-        </p>
-        <a href="#">Read More</a>
-      </div>
-
-      <div class="slider-navigation">
-        <div class="nav-btn active"></div>
-        <div class="nav-btn"></div>
-        <div class="nav-btn"></div>
-        <div class="nav-btn"></div>
-        <div class="nav-btn"></div>
-      </div>
-    </section>
 
     <script type="text/javascript" src="menu.js"></script>
   </body>
