--- a/index2.html
+++ b/index2.html
@@ -13,13 +13,8 @@
     <nav>
         <div class="nav-left">
             <a href="index2.html">
-            <img src="images/logo2.png" class="logo"/>
+            <img src="images/trashlogo.png" class="logo"/>
             </a>
-            <ul>
-                <li><img src="images/notification.png"/></li>
-                <li><img src="images/inbox.png"/></li>
-                <li><img src="images/video.png"/></li>
-            </ul>
         </div>
         <div class="nav-right">
 
@@ -79,21 +74,6 @@
     <div class="container">
         <!----------------left-sidebar--------------->
         <div class="left-sidebar">
-            <div class="imp-links">
-                <a href="#"><img src="images/news.png"/> Latest News</a>
-                <a href="#"><img src="images/friends.png"/> Friends</a>
-                <a href="#"><img src="images/group.png"/> Group</a>
-                <a href="#"><img src="images/marketplace.png"/> marketplace</a>
-                <a href="#"><img src="images/watch.png"/> Watch</a>
-                <a href="#">See More</a>
-            </div>
-            <div class="shortcut-links">
-                <p>Your Shortcuts</p>
-                <a href="#"><img src="images/shortcut-1.png"/>Web Developers</a>
-                <a href="#"><img src="images/shortcut-2.png"/>Web Design course</a>
-                <a href="#"><img src="images/shortcut-3.png"/>Full Stack Development</a>
-                <a href="#"><img src="images/shortcut-4.png"/>Website Experts</a>
-            </div>
         </div>
          <!----------------main-content--------------->
         <div class="main-content">
