--- a/Register.html
+++ b/Register.html
@@ -12,7 +12,7 @@
 <body>
 <!-- partial:index.partial.html -->
 <div class="screen-1">
-  <div class="div778"><img class="img778" src="./images/cool-handshake-icon-vector-illustration-53833687-removebg-preview.png" alt=""></div>
+  <div class="div778"><img class="img778" src="images/trashlogo.png" alt=""></div>
   <div class="email">
     <label for="email">Email Address</label>
     <div class="sec-2">
@@ -28,7 +28,7 @@
       <ion-icon class="show-hide" name="eye-outline"></ion-icon>
     </div>
   </div>
-  <button class="login" onClick="parent.location='index.html'">Login</button>
+  <button class="login" onClick="parent.location='index2.html'">Login</button>
   <div class="footer"><a  class="a78" href="sign up.html"><span>Sign up</span></a><span>Forgot Password?</span></div>
 </div>
 <!-- partial -->
